--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+
+<!---Favicon link-->
+<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+
+    <title>Love Maths</title>
 </head>
 
 <body>
